Propagate getters and setters onto the inner object. bug 420585, r+sr=jst